force-app/main/default/objects/WebsiteListingView__c/WebsiteListingView__c.object-meta.xml
<CustomObject>
    <label>Website View</label>
    <nameField>
        <label>Website View</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>