force-app/main/default/objects/WebsiteListingView__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Website Views</relationshipLabel>
    <relationshipName>Website_Listing_Views</relationshipName>
    <type>Lookup</type>
</CustomField>