force-app/main/default/objects/WebsiteListingView__c/fields/PropertyId__c.field-meta.xml
<CustomField>
    <fullName>PropertyId__c</fullName>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>